--- a/client/src/index.css
+++ b/client/src/index.css
@@ -27,6 +27,7 @@
   --purple: #5949a2;
   --red: #fe5c00;
   width: 100%;
+  font-size: 10px; /*1rem = 10px*/
 }
 
 body {
@@ -39,6 +40,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --font-size-xl: clamp(1rem, 7vw, 2.5rem); /*35px*/
+  --font-size-lg: clamp(1rem, 6vw, 2.5rem); /*30px*/
+  --font-size-ml: clamp(1rem, 5vw, 2rem); /*25px*/
+  --font-size-md: clamp(1rem, 4vw, 2rem); /*20px*/
+  --font-size-ms: clamp(1rem, 3vw, 1.5rem); /*15px*/
+  --font-size-sm: clamp(1rem, 2vw, 1.5rem); /*10px*/
 }
 
 code {
