refactor : 랜딩페이지(pc)

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -27,13 +27,16 @@
   --purple: #5949a2;
   --red: #fe5c00;
   width: 100%;
+  height: 90%;
   font-size: 10px; /*1rem = 10px*/
 }
 
 body {
   margin: 0;
   padding: 0;
-  height: 100%;
+  width: 100vw;
+  background-color: #ffc700;
+  height: 100vh;
 
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
